trunk/Archive2/61/2f087f10746c17/output
main.cpp:1:2: error: invalid preprocessing directive
#latex <iostream>
 ^
1 error generated.
